@@ -130,63 +130,63 @@
     <include name="Items_Settings">
         <content>
             <item id="1">
-                <label>$LOCALIZE[14206] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[14206]</label>
                 <icon>special://skin/extras/icons/skinsettings.png</icon>
                 <onclick>ReplaceWindow(InterfaceSettings)</onclick>
                 <property name="path">ReplaceWindow(InterfaceSettings)</property>
                 <property name="altpath">ActivateWindow(InterfaceSettings)</property>
             </item>
             <item id="4">
-                <label>$LOCALIZE[166] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[166]</label>
                 <icon>special://skin/extras/icons/paintbrush.png</icon>
                 <onclick>ReplaceWindow(SkinSettings)</onclick>
                 <property name="path">ReplaceWindow(SkinSettings)</property>
                 <property name="altpath">ActivateWindow(SkinSettings)</property>
             </item>
             <item id="2">
-                <label>$LOCALIZE[14211] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[14211]</label>
                 <icon>special://skin/extras/icons/tags.png</icon>
                 <onclick>ReplaceWindow(MediaSettings)</onclick>
                 <property name="path">ReplaceWindow(MediaSettings)</property>
                 <property name="altpath">ActivateWindow(MediaSettings)</property>
             </item>
             <item id="3">
-                <label>$LOCALIZE[14200] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[14200]</label>
                 <icon>special://skin/extras/icons/equalizer.png</icon>
                 <onclick>ReplaceWindow(PlayerSettings)</onclick>
                 <property name="path">ReplaceWindow(PlayerSettings)</property>
                 <property name="altpath">ActivateWindow(PlayerSettings)</property>
             </item>
             <item id="5">
-                <label>$LOCALIZE[13000] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[13000]</label>
                 <icon>special://skin/extras/icons/configure.png</icon>
                 <onclick>ReplaceWindow(SystemSettings)</onclick>
                 <property name="path">ReplaceWindow(SystemSettings)</property>
                 <property name="altpath">ActivateWindow(SystemSettings)</property>
             </item>
             <item id="6">
-                <label>$LOCALIZE[14036] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[14036]</label>
                 <icon>special://skin/extras/icons/network.png</icon>
                 <onclick>ReplaceWindow(servicesettings)</onclick>
                 <property name="path">ReplaceWindow(servicesettings)</property>
                 <property name="altpath">ActivateWindow(servicesettings)</property>
             </item>
             <item id="10">
-                <label>$LOCALIZE[31294] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[31294]</label>
                 <icon>special://skin/extras/icons/livetv.png</icon>
                 <onclick>ReplaceWindow(pvrsettings)</onclick>
                 <property name="path">ReplaceWindow(pvrsettings)</property>
                 <property name="altpath">ActivateWindow(pvrsettings)</property>
             </item>
             <item id="9">
-                <label>$LOCALIZE[130] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[130]</label>
                 <icon>special://skin/extras/icons/sysinfo.png</icon>
                 <onclick>ReplaceWindow(systeminfo)</onclick>
                 <property name="path">ReplaceWindow(systeminfo)</property>
                 <property name="altpath">ActivateWindow(systeminfo)</property>
             </item>
             <item id="7">
-                <label>$LOCALIZE[13200] $LOCALIZE[5]</label>
+                <label>$LOCALIZE[13200]</label>
                 <icon>special://skin/extras/icons/actor.png</icon>
                 <onclick>ReplaceWindow(Profiles)</onclick>
                 <property name="path">ReplaceWindow(Profiles)</property>
