@@ -2,6 +2,8 @@
 LEIA - Add artwork beef artwork helper support in videoinfodialog
 LEIA - Add support for artwork beef artwork helper for extrafanart
 Fix settings widget focus text
+Fix settings labels
+Cycle time of extrafanart reduced to 7 seconds
 
 [B]0.9.18[/B]
 LEIA - Fix some PVR recording and some infolabels
